practice-exam-tracker-sfdx/ooo-app/main/default/objects/Interview__c/fields/Batch_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Batch_Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Batch Assignment</label>
    <referenceTo>Batch_Assignment__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>