practice-exam-tracker-sfdx/ooo-app/main/default/objects/Interview__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <label>Overall Score</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>